# projet_fin_d_annee

./: .gitignore  Agent.cpp  Agent.hpp  GameManager.cpp  GameManager.hpp  Makefile  README.md  main.cpp  q_table.cpp  q_table.hpp
gestion_projet/: .~lock.folettoPimenta_kuassivi_tosti_projet_imi_5A.pptx#  TODO.txt  folettoPimenta_kuassivi_tosti_projet_imi_5A.docx  folettoPimenta_kuassivi_tosti_projet_imi_5A.odt  objectifs.md  poster.odt  resume_du_projet  sprints.md
gestion_projet/sprints/: fiche_action_developpement.odt  suivi_des_sprints.odt
lib/: Agent.cpp  Agent.hpp  GameManager.cpp  GameManager.hpp
projet/: CMakeLists.txt
projet/code_projet/: Makefile  q_table.txt  q_table_v0.txt  q_table_v1.92.txt  q_table_v1.99.txt  q_table_v2.91.txt  q_table_v2.99.txt  q_table_v3.91.txt  q_table_v3.99.txt
projet/code_projet/data/splice/: splice.DAE  splice.FBX
projet/code_projet/lib/: Agent.cpp  Agent.hpp  Combat.cpp  Combat.hpp  Enemy.cpp  Enemy.hpp  GameManager.cpp  GameManager.hpp  Learner.cpp  Learner.hpp  MyEventReceiver.cpp  MyEventReceiver.hpp  MyJoystickManager.cpp  MyJoystickManager.hpp  Q_table.cpp  Q_table.hpp  State.cpp  State.hpp  Trainer.cpp  Trainer.hpp  enemy.cpp  enemy.hpp  gui_ids.h  q_table.cpp  q_table.hpp  utils.hpp
projet/code_projet/lib/libGridMapping/: globalHeader.hpp  gridMapping.cpp  gridMapping.hpp
projet/code_projet/src/: main.cpp
src/: main.cpp
